--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 	<script>
 		const data = {
 			Form: {
-				Is: 'Dialog',
+				Is: 'Page',
 				Title: 'Dialog Title',
 				Width: '80rem',
 				Items: [
