--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 					{
 						Id: 1,
 						Is: 'Grid',
-						Columns: 'auto auto auto 1fr',
+						Columns2: 'auto auto auto 1fr',
 						Rows: 'auto auto auto',
 						Items: [
 							{
