--- a/public/index.html
+++ b/public/index.html
@@ -85,13 +85,19 @@
 </head>
 <body>
 	<div id="app">
-		<fd-container :form="Form" :fields="Fields" :components="Components"></fd-container>
+		<fd-container :form="Form2" :fields="Fields" :components="Components"></fd-container>
 	</div>
 
 	<script src='vendor/vue.js'></script>
 	<script src='assets/formdesigner.js'></script>
 	<script>
 		const data = {
+			Form2: {
+				"UseCollectionView": true, "Schema": "cat", "Table": "Agents", "Buttons": null, "Taskpad": { "Is": "Taskpad", "Label": null, "Data": null, "DataType": "_", "Items": [{ "Is": "Panel", "Label": "@Filters", "Data": null, "DataType": "_", "Items": [{ "Is": "Grid", "Label": null, "Data": null, "DataType": "_", "Items": [{ "Is": "Selector", "Label": "@Parent", "Data": "Parent.Filter.Reference", "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }], "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }], "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }], "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }, "Is": "Page", "Label": "@Agents", "Data": "Agents", "DataType": "_", "Items": [{
+					"Is": "Grid", "Label": null, "Data": null, "DataType": "_", "Items": [{ "Is": "Toolbar", "Label": null, "Data": null, "DataType": "_", "Items": [{ "Is": "Button", "Label": "@Create", "Data": null, "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": { "Command": "Create", "Argument": "catalogs/agents", "Url": null }, "Props": null }, { "Is": "Button", "Label": null, "Data": null, "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": { "Command": "Edit", "Argument": "Parent.ItemsSource", "Url": "catalogs/agents" }, "Props": null }, { "Is": "Button", "Label": null, "Data": null, "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": { "Command": "Reload", "Argument": null, "Url": null }, "Props": null }, { "Is": "Aligner", "Label": null, "Data": null, "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }, { "Is": "SearchBox", "Label": null, "Data": "Parent.Filter.Fragment", "DataType": "_", "Items": null, "Width": "20rem", "Height": null, "Grid": null, "Command": null, "Props": null }], "Width": null, "Height": null, "Grid": { "Row": 1, "Col": 1, "RowSpan": 0, "ColSpan": 0 }, "Command": null, "Props": null },
+					{ "Is": "DataGrid", "Label": null, "Data": "Parent.ItemsSource", "DataType": "_", "Items": [{ "Is": "DataGridColumn", "Label": "@Id", "Data": "Id", "DataType": "Id", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }, { "Is": "DataGridColumn", "Label": "@Parent", "Data": "Parent.Name", "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }, { "Is": "DataGridColumn", "Label": "@Name", "Data": "Name", "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }, { "Is": "DataGridColumn", "Label": "@Memo", "Data": "Memo", "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }, { "Is": "DataGridColumn", "Label": "@Owner", "Data": "Owner", "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null }], "Width": null, "Height": "100%", "Grid": { "Row": 2, "Col": 1, "RowSpan": 0, "ColSpan": 0 }, "Command": { "Command": "Edit", "Argument": "catalogs/agents", "Url": null }, "Props": null }, { "Is": "Pager", "Label": null, "Data": "Parent.Pager", "DataType": "_", "Items": null, "Width": null, "Height": null, "Grid": { "Row": 3, "Col": 1, "RowSpan": 0, "ColSpan": 0 }, "Command": null, "Props": null }], "Width": null, "Height": "100%", "Grid": null, "Command": null, "Props": { "Rows": "auto 1fr auto", "Columns": "1fr", "Url": null, "Style": "Default" }
+				}], "Width": null, "Height": null, "Grid": null, "Command": null, "Props": null
+			},
 			Form: {
 				Is: 'Dialog',
 				Label: 'Dialog Title',
